# tech-challenge-fase-2-8IADT

./: .gitignore  Dockerfile  README.md  openapi.yaml  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  frontend-ci.yml
data/: deliveries.json  locations.json  vehicles.json
data/instances/: hospital_points.csv
docs/: CHANGELOG.md  RELEASE_NOTES.md  USER_GUIDE.md  api.md  design_repr.md  experiments.md  fitness.md  implementation_notes.md  initialization.md  llm_integration.md  operators.md  output_formats.md  runtime.md  testing.md
docs/site/: index.html
experiments/: jobs.json  validate_parse.json  validate_repr.json
experiments/batch_runs/: aggregate_results.csv
experiments/configs/: experiment_01.yaml
experiments/prompts/: route_instructions_prompt.txt
experiments/run_1770494072/: best_solution.csv  history.csv  instruction.txt  route_map.html  routes.geojson
experiments/run_1770500916/: best_solution.csv  history.csv  results.csv  route_map.html  (+1 more)
frontend/: .gitignore  README.md  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.js  vercel.json
notebooks/: compare_results.ipynb  export_visualize.ipynb  llm_instructions.ipynb  quickstart.ipynb
scripts/: build_wheelhouse.sh  create_release.sh  demo_run.sh  export_artifacts.py  generate_compare_plot.py  generate_instructions.py  generate_notebook_screenshots.py  install_from_wheelhouse.sh  install_system_deps.sh  run_comparative.py  run_experiments.py  run_ga_example.py  run_local.sh  validate_parse.py  validate_repr.py
src/: optimize.py
(+66 files in other folders)
